--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ CNN_keras/model_0_epochs_80/
 CNN_keras/model_5_epochs_10/
 CNN_keras/model_6_epochs_10/
 CNN_keras/model_0_epochs_10/
+CNN_keras/model_0_epochs_80_aug_/
+CNN_keras/model_7_epochs_10/
