--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ CNN_keras/model_0_epochs_80_aug_/
 CNN_keras/model_7_epochs_10/
 img_test/
 cifar-10-batches-bin/
+CNN_keras/model_6_epochs_50_aug_/
